--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,9 @@
 
     <title>Ocean Insight</title>
 
+    <!-- favicon provided as inline SVG to avoid 404 requests -->
+    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='0.9em' font-size='90'%3E%F0%9F%8C%8A%3C/text%3E%3C/svg%3E" />
+
     <meta property="og:title" content="Ocean Insight" />
     <meta property="og:description" content="Ocean data analytics and insights platform" />
     <meta property="og:type" content="website" />
